--- a/public/project/views/sidebar/sidebar.view.html
+++ b/public/project/views/sidebar/sidebar.view.html
@@ -7,27 +7,17 @@
         <li ng-class="{'active': $location.url()=='/dashboard'}" ng-show="currentUser">
             <a href="#/dashboard"><i class="fa fa-th-large"></i>Dashboard</a>
         </li>
-        </li>
-        <li ng-class="{'active': $location.url()=='/profile'}" ng-show="currentUser">
-            <a href="#/profile"><i class="fa fa-user"></i>Personal Info</a>
-        </li>
         <li ng-class="{'active': $location.url()=='/admin'}" ng-show="currentUser.roles.indexOf('admin') >= 0">
             <a href="#/admin"><i class="fa fa-university"></i>Admin</a>
         </li>
-        <li ng-class="{'active': $location.url()=='/studentServices'}" ng-show="currentUser">
-            <a href="#/studentServices"><i class="fa fa-users"></i>Student Services</a>
-        </li>
-        <li ng-class="{'active': $location.url()=='/registration'}" ng-show="currentUser">
-            <a href="#/registration"><i class="fa fa-pencil-square-o"></i>Course Registration</a>
-        </li>
-        <li ng-class="{'active': $location.url()=='/schedule'}" ng-show="currentUser">
-            <a href="#/schedule"><i class="fa fa-list-alt"></i>My Class Schedule</a>
+        <li ng-class="{'active': $location.url()=='/courses'}" ng-show="currentUser">
+            <a href="#/courses"><i class="fa fa-th-list"></i>Courses</a>
         </li>
         <li ng-class="{'active': $location.url()=='/degree'}" ng-show="currentUser">
             <a href="#/degree"><i class="fa fa-graduation-cap"></i>Degree Tracking</a>
         </li>
-        <li ng-class="{'active': $location.url()=='/courses'}" ng-show="currentUser">
-            <a href="#/courses"><i class="fa fa-th-list"></i>Course List</a>
+        <li ng-class="{'active': $location.url()=='/profile'}" ng-show="currentUser">
+            <a href="#/profile"><i class="fa fa-user"></i>Profile</a>
         </li>
     </ul>
 </div>
