--- a/public/project/client/views/header/header.view.html
+++ b/public/project/client/views/header/header.view.html
@@ -32,10 +32,10 @@
             </button>
         </div>
 
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" onclick="closeMenu()">
             <ul class="nav navbar-nav mobile-nav">
                 <li ng-class="{'active': $location.url()=='/dashboard'}" ng-show="currentUser">
-                    <a id="dash" href="#/dashboard"><i class="fa fa-th-large"></i>Dashboard</a>
+                    <a href="#/dashboard"><i class="fa fa-th-large"></i>Dashboard</a>
                 </li>
                 <li ng-class="{'active': $location.url()=='/admin'}" ng-show="currentUser.roles.indexOf('admin') >= 0">
                     <a href="#/admin"><i class="fa fa-university"></i>Admin</a>
