--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -1,7 +1,7 @@
 <div ng-controller="ProfileController" class="container-fluid">
     <!-- {{currentUser}} -->
     <div class="row">
-        <div class="col-sm-9 col-sm-offset-3 col-md-6 col-md-offset-3 main">
+        <div class="col-sm-9 col-sm-offset-3 col-md-5 col-md-offset-2 main">
             <h1>Personal Information</h1>
 
             <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
@@ -34,33 +34,37 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="" class="col-sm-3 control-label">Email:</label>
-                    <div class="col-sm-9">
-                        <input ng-model="currentUser.email" type="email" class="form-control" id="" placeholder="Email">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="" class="col-sm-3 control-label">NUID:</label>
-                    <div class="col-sm-9">
-                        <input ng-model="currentUser.nuid" type="number" class="form-control" id="" placeholder="000000000">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="" class="col-sm-3 control-label">Graduation Year:</label>
-                    <div class="col-sm-9">
-                        <input ng-model="currentUser.graduationYear" type="text" class="form-control" id="" placeholder="2018">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="" class="col-sm-3 control-label">Co-op Cycle:</label>
-                    <div class="col-sm-9">
-                        <input ng-model="currentUser.cycle" type="text" class="form-control" id="" placeholder="AA">
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-sm-2 pull-right">
+                    <div class="col-sm-2">
                         <button ng-click="update(currentUser)" type="submit" class="btn btn-default btn-md">Update</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div class="col-sm-9 col-md-4 col-md-offset-1 profile-panel">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="" class="col-sm-3">Email:</label>
+                    <div class="col-sm-9">
+                        <span>email@email.com</span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="" class="col-sm-3">NUID:</label>
+                    <div class="col-sm-9">
+                        <span>000000000</span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="" class="col-sm-3">Graduation Year:</label>
+                    <div class="col-sm-9">
+                        <span>2018</span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="" class="col-sm-3">Co-op Cycle:</label>
+                    <div class="col-sm-9">
+                        <span>AA</span>
                     </div>
                 </div>
             </form>
