--- a/public/project/client/views/sidebar/sidebar.view.html
+++ b/public/project/client/views/sidebar/sidebar.view.html
@@ -3,7 +3,7 @@
         <li ng-show="currentUser" class="user">
             <a href="#/profile"><img src="https://pbs.twimg.com/profile_images/497043545505947648/ESngUXG0.jpeg" />{{currentUser.firstName}} {{currentUser.lastName}}</a>
         </li>
-        <li ng-show="currentUser" class="sidebar-label"><span class="portal-label">YourNEU Student Portal</span></li>
+        <li ng-show="currentUser" class="sidebar-label"><span class="portal-label">CourseSource</span></li>
         <li ng-class="{'active': $location.url()=='/dashboard'}" ng-show="currentUser">
             <a href="#/dashboard"><i class="fa fa-th-large"></i>Dashboard</a>
         </li>
@@ -13,7 +13,10 @@
         <li ng-class="{'active': $location.url()=='/courses'}" ng-show="currentUser">
             <a href="#/courses"><i class="fa fa-th-list"></i>Courses</a>
         </li>
-        <li ng-class="{'active': $location.url()=='/degree'}" ng-show="currentUser">
+        <li ng-class="{'active': $location.url()=='/saved'}" ng-show="currentUser">
+            <a href="#/saved"><i class="fa fa-star"></i>Saved Courses</a>
+        </li>
+        <li ng-class="{'active': $location.url()=='/degree'}"  ng-show="currentUser.roles.indexOf('student') >= 0">
             <a href="#/degree"><i class="fa fa-graduation-cap"></i>Degree Tracking</a>
         </li>
         <li ng-class="{'active': $location.url()=='/profile'}" ng-show="currentUser">
