ready to implement server stuff

--- a/public/project/client/views/dashboard/dashboard.view.html
+++ b/public/project/client/views/dashboard/dashboard.view.html
@@ -13,62 +13,30 @@
     <div class="row">
         <div class="col-lg-8 col-md-8">
             <div class="panel panel-default schedule-panel">
-                <div class="panel-heading">Schedule <span class="text-muted">| Spring 2016 Semester</span></div>
+                <div class="panel-heading"><i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;Schedule <span class="text-muted">| Spring 2016 Semester</span></div>
                 <div class="panel-body">
                     <div class="list-group">
-                        <a href="#" class="list-group-item">
-                            <i class="fa fa-calendar"></i> New Comment
-                            <span class="pull-right text-muted small"><em>4 minutes ago</em></span>
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <i class="fa fa-calendar"></i> 3 New Followers
-                            <span class="pull-right text-muted small"><em>12 minutes ago</em></span>
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <i class="fa fa-calendar"></i> Message Sent
-                            <span class="pull-right text-muted small"><em>27 minutes ago</em></span>
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <i class="fa fa-calendar"></i> New Task
-                            <span class="pull-right text-muted small"><em>43 minutes ago</em></span>
-                        </a>
+                        <a href="#" class="list-group-item">Course</a>
+                        <a href="#" class="list-group-item">Course</a>
+                        <a href="#" class="list-group-item">Course</a>
+                        <a href="#" class="list-group-item">Course</a>
                     </div>
                 </div>
             </div>
-            <!-- /.panel -->
         </div>
-
         <div class="col-lg-4 col-md-4">
-            <div class="panel panel-default dates-panel">
-                <div class="panel-heading">Dates</div>
+            <div class="panel panel-default schedule-panel">
+                <div class="panel-heading"><i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;Something</div>
                 <div class="panel-body">
                     <div class="list-group">
-                        <a href="#" class="list-group-item">
-                            <i class="fa fa-calendar"></i> New Comment
-                            <span class="pull-right text-muted small"><em>4 minutes ago</em></span>
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <i class="fa fa-calendar"></i> 3 New Followers
-                            <span class="pull-right text-muted small"><em>12 minutes ago</em></span>
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <i class="fa fa-calendar"></i> Message Sent
-                            <span class="pull-right text-muted small"><em>27 minutes ago</em></span>
-                        </a>
-                        <a href="#" class="list-group-item">
-                            <i class="fa fa-calendar"></i> New Task
-                            <span class="pull-right text-muted small"><em>43 minutes ago</em></span>
-                        </a>
+                        <a href="#" class="list-group-item">Course</a>
+                        <a href="#" class="list-group-item">Course</a>
+                        <a href="#" class="list-group-item">Course</a>
+                        <a href="#" class="list-group-item">Course</a>
                     </div>
-                    <!-- /.list-group -->
                 </div>
-                <!-- /.panel-body -->
             </div>
-            <!-- /.panel -->
         </div>
-        <!-- /.col-lg-4 -->
     </div>
-    <!-- / row -->
-
 
 </div>
