--- a/public/project/client/css/project-style.css
+++ b/public/project/client/css/project-style.css
@@ -31,7 +31,7 @@ input {
 h1 {
     margin: 0px 0 20px;
 }
-.btn, .panel {
+.btn, .panel, .panel-heading, .panel-body, .list-group-item {
     border-radius: 0 !important;
 }
 
@@ -430,7 +430,7 @@ a.forgot-password {
 
 /****************** DASHBOARD ****************/
 
-.dashboard h1 {
+.main h1 {
     display: inline-block;
 }
 p.dashboard-welcome {
