--- a/public/project/client/views/dashboard/dashboard.view.html
+++ b/public/project/client/views/dashboard/dashboard.view.html
@@ -1,14 +1,14 @@
 <div ng-controller="DashboardController" class="dashboard col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main dashboard">
     <h1>Dashboard<br><p class="dashboard-welcome">Welcome back, <strong>{{currentUser.firstName}}</strong>!</p></h1>
 
-    <div ng-show="currentUser" class="pull-right search">
+    <!-- <div ng-show="currentUser" class="pull-right search">
         <div class="input-group">
             <input type="text" class="form-control" placeholder="Search...">
             <span class="input-group-btn">
                     <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
                 </span>
         </div>
-    </div>
+    </div> -->
 
     <div class="row">
         <div class="col-lg-8 col-md-8">
