--- a/public/project/client/views/login/login.view.html
+++ b/public/project/client/views/login/login.view.html
@@ -3,27 +3,39 @@
         <div class="col-sm-6 col-sm-offset-3 col-md-5 col-md-offset-4 main">
             <h1>Login</h1>
             <form class="form-horizontal">
+
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Username:</label>
+
                     <div class="col-sm-10">
-                        <input ng-model="user.username" type="text" class="form-control" id="" placeholder="Username">
+
+                        <input ng-model="model.user.username" type="text" class="form-control" id="" placeholder="Username">
+
                     </div>
                 </div>
+
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Password:</label>
+
                     <div class="col-sm-10">
-                        <input ng-model="user.password" type="password" class="form-control" id="" placeholder="Password">
+
+                        <input ng-model="model.user.password" type="password" class="form-control" id="" placeholder="Password">
+
                     </div>
                 </div>
+
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button ng-click="login(user)" type="submit" class="btn btn-default btn-md">Login</button>
+
+                        <button ng-click="model.login(model.user);" type="submit" class="btn btn-default btn-md">Login</button>
 
                         <a href="#" class="forgot-password">Forgot your password?</a>
 
                         <div class="register-link">Don't have an account? <a href="#/register">Sign up</a>!</div>
+
                     </div>
                 </div>
+
             </form>
         </div>
     </div>
