--- a/public/project/client/views/profile/profile.view.html
+++ b/public/project/client/views/profile/profile.view.html
@@ -46,7 +46,7 @@
                 <div class="form-group">
                     <label for="" class="col-sm-3">Email:</label>
                     <div class="col-sm-9">
-                        <span>email@email.com</span>
+                        <span>{{currentUser.email}}</span>
                     </div>
                 </div>
                 <div class="form-group">
