--- a/public/project/client/views/register/register.view.html
+++ b/public/project/client/views/register/register.view.html
@@ -6,33 +6,33 @@
             <div ng-show="message" class="alert alert-danger" role="alert">{{message}}</div>
 
             <form class="form-horizontal">
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Email:</label>
                     <div class="col-sm-10">
                         <input ng-model="user.email" type="email" class="form-control" id="" placeholder="Email">
                     </div>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Username:</label>
                     <div class="col-sm-10">
-                        <input ng-model="user.username" type="text" class="form-control" id="" placeholder="Username">
+                        <input ng-model="model.user.username" type="text" class="form-control" id="" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Password:</label>
                     <div class="col-sm-10">
-                        <input ng-model="user.password" type="password" class="form-control" id="" placeholder="Password">
+                        <input ng-model="model.user.password" type="password" class="form-control" id="" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Verify Password:</label>
                     <div class="col-sm-10">
-                        <input ng-model="user.password2" type="password" class="form-control" id="" placeholder="Verify Password">
+                        <input ng-model="model.user.password2" type="password" class="form-control" id="" placeholder="Verify Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default btn-md" ng-click="register(user)">Register</button>
+                        <button ng-click="model.register(model.user);" type="submit" class="btn btn-default btn-md">Register</button>
                     </div>
                 </div>
             </form>
